[B]Retrospect v5.2.13 - Changelog - 2020-10-14[/B]

.....

[B]Framework related[/B]
_None_

[B]GUI/Settings/Language related[/B]
_None_

[B]Channel related[/B]
* Fixed: TV3 Play (Norge) had missing shows (Fixes #1430)
* Added: ViaFree (Norge) channel with all ViaFree.no content (See #1430)