@@ -11,3 +11,4 @@ _None_
 [B]Channel related[/B]
 * Fixed: TV3 Play (Norge) had missing shows (Fixes #1430)
 * Added: ViaFree (Norge) channel with all ViaFree.no content (See #1430)
+* Fixed: Wrong subtitle language selected for ViaFree (Fixes #1431)
